--- a/client/src/boards/css/buttons.css
+++ b/client/src/boards/css/buttons.css
@@ -11,11 +11,11 @@
     outline: none;
     padding: 10px 20px;
     border-radius: 12px;
-    border: 4px solid #FFF8E8;
+    border: 4px solid var(--borderColor);
     background-color: transparent;
-    color: #FFF8E8;
+    color: var(--textColor);
     font-size: 26px;
-    font-family: "Poppins", sans-serif;
+    font-family: var(--fontStyle);
 }
 
 .wideButton {
@@ -30,11 +30,11 @@
     outline: none;
     padding: 10px 20px;
     border-radius: 12px;
-    border: 4px solid #FFF8E8;
+    border: 4px solid var(--borderColor);
     background-color: transparent;
-    color: #FFF8E8;
+    color: var(--textColor);
     font-size: 26px;
-    font-family: "Poppins", sans-serif;    
+    font-family: var(--fontStyle);   
 }
 
 .loginButton {
@@ -49,11 +49,11 @@
     outline: none;
     padding: 10px 20px;
     border-radius: 12px;
-    border: 4px solid #FFF8E8;
+    border: 4px solid var(--borderColor);
     background-color: transparent;
-    color: #FFF8E8;
+    color: var(--textColor);
     font-size: 26px;
-    font-family: "Poppins", sans-serif;
+    font-family: var(--fontStyle);
 
     /* loginButton specific styling: */
     width: 50%;
@@ -63,13 +63,13 @@
 
 .hyperlink {
     font-size: 16px;
-    font-family: "Poppins", sans-serif;
-    color: #0c4480;
+    font-family: var(--fontStyle);
+    color: var(--hyperlinkColor);
     text-decoration: none;
     cursor: pointer;
     display: inline;
 }
 
 .hyperlink:hover {
-    color: white; /* Adjust hover text color as needed */
+    color: var(--hyperlinkHoverColor);
 }
