--- a/client/src/boards/css/main.board.css
+++ b/client/src/boards/css/main.board.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: #AAB396;
+  background-color: var(--backgroundColor);
   top: 0px;
   bottom: 0px;
   left: 0px;
@@ -167,9 +167,9 @@
 
 .mode1Text {
   font-size: 2vh;
-  color: white;
+  color: var(--textColor);
   text-align: center;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--fontStyle);
 }
 
 .mode1TimerDiv {
@@ -182,13 +182,13 @@
 
 .timerText {
   font-size: 2vh;
-  color: white;
+  color: var(--textColor);
   text-align: center;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--fontStyle);
 }
 
 .smallText {
   font-size: 16px;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--fontStyle);
   display: inline;
 }
