--- a/client/src/boards/css/variables.css
+++ b/client/src/boards/css/variables.css
@@ -2,10 +2,15 @@
     --backgroundColor: #AAB396;
     --primaryColor: #AAB396;
     --secondaryColor: #808E67;
-    --accentColor: #F2CC8F;
+    --accentColor: #FFF8E8;
 
     --borderColor: #FFF8E8;
     --textColor: #FFF8E8;
     --fontStyle: "Poppins", sans-serif;
     --headerFontSize: 3em;
+
+    --hyperlinkColor: #0C4480;
+    --hyperlinkHoverColor: white;
+
+    --choiceBoxLabelColor: #333;
 }
