--- a/client/src/components/buttons/hyperlink.css
+++ b/client/src/components/buttons/hyperlink.css
@@ -1,10 +1,10 @@
 .custom-hyperlink {
   text-decoration: none;
-  color: blue; /* Adjust the color as needed */
+  color: var(--hyperlinkColor); /* Adjust the color as needed */
   cursor: pointer;
   display: inline; /* Change to inline to make it appear like regular text */
 }
 
 .custom-hyperlink:hover {
-  color: white; /* Adjust hover text color as needed */
+  color: var(--hyperlinkHoverColor); /* Adjust hover text color as needed */
 }
