--- a/client/src/boards/css/mode2.css
+++ b/client/src/boards/css/mode2.css
@@ -3,16 +3,74 @@
     justify-content: center;
     gap: 1vh;
 }
+
+.mode2_upperDiv {
+    background-color: #AAB396;
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+}
+
 .mode2_centerDiv {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 1vh;
+    flex: 5;
 }
 .pointsText {
     font-size: 2vh;
     color: white;
     text-align: center;
     font-family: "Poppins", sans-serif;
+}
+
+.mode2_lowerDiv {
+    background-color: #AAB396;
+    position: relative;
+    gap: 2em;
+    flex: 1;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    overflow: hidden;
+    padding: 3em;
+}
+
+.mode2_lowerUpperDiv {
+    display: flex;
+    width: 67.5%;
+    justify-content: right;
+    align-items: right;
+    gap: 1em;
+}
+
+.Mode2_content {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    background-color: #AAB396;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: scroll;
+    background-origin: padding-box;
+    background-clip: border-box;
+    z-index: 8;
+}
+
+.gamePage {
+    display: flex;
+    border : 3px solid #FFF8E8;
 }
