--- a/client/src/boards/css/settings.css
+++ b/client/src/boards/css/settings.css
@@ -76,3 +76,21 @@
     position: relative; 
     transform: scale(0.8);
 }
+
+.settingButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    max-width: 18em;
+    flex-grow: 1;
+    box-sizing: border-box;
+    padding: 1em 2em; 
+    border-radius: 12px;
+    border: 4px solid var(--borderColor);
+    background-color: transparent;
+    color: var(--textColor);
+    font-size: 1.2em;
+    font-family: var(--fontStyle);  
+}
