--- a/client/src/boards/css/settings.css
+++ b/client/src/boards/css/settings.css
@@ -25,7 +25,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 40%;
+    width: 50%;
+    box-sizing: border-box;
     /* background-color: blue; */
 }
 
