--- a/client/src/boards/css/settings.css
+++ b/client/src/boards/css/settings.css
@@ -83,15 +83,21 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 100%;
-    max-width: 18em;
+    width: 30%;
     flex-grow: 1;
+    flex-shrink: 1;
     box-sizing: border-box;
     padding: 1em 2em; 
     border-radius: 12px;
     border: 4px solid var(--borderColor);
     background-color: transparent;
     color: var(--textColor);
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-family: var(--fontStyle);  
+    transform-origin: center;
+    margin: 0 10px;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
