--- a/client/src/components/css/settingsChoiceBox.css
+++ b/client/src/components/css/settingsChoiceBox.css
@@ -18,7 +18,7 @@
 .settingsChoiceBoxSelect {
     font-size: 20px;
     padding: 5px;
-    border: 4px solid var(--borderColor);
+    border: 3px solid var(--borderColor);
     border-radius: 12px;
     background-color: transparent;
     color: var(--textColor);
@@ -28,6 +28,15 @@
     appearance: none; 
     position: relative; 
     display: block;
+
+}
+.settingsChoiceBoxSelect:focus {
+    outline: none;
+}
+
+.settingsChoiceBoxSelect option {
+    color: var(--textColor);
+    background-color: var(--backgroundColor);
 }
 
 /* TODO: FIX SELECTION WIDTH FOR FIREFOX */
