slight bug fixes and animation

--- a/client/src/components/css/editableField.css
+++ b/client/src/components/css/editableField.css
@@ -32,6 +32,9 @@
     margin-bottom: 10px; /* Add space below the input */
     width: 65%; /* Adjust width to fit the container */
 }
+.editableField-input:focus {
+    outline: none; 
+}
 
 .editableField-button {
     display: flex;
