--- a/client/src/boards/css/main.board.css
+++ b/client/src/boards/css/main.board.css
@@ -75,7 +75,6 @@
   box-sizing: border-box;
 }
 
-/* Fix for unequal button stacking in grid */
 @media (max-aspect-ratio: 1150/1080) {
   .MainBoard_grid {
     flex-direction: column;
@@ -133,20 +132,6 @@
   flex: 2;
 }
 
-/*
-.mode1_innerDiv:nth-child(1) {
-  background-color: yellow;
-}
-
-.mode1_innerDiv:nth-child(2) {
-  background-color: green;
-}
-
-.mode1_innerDiv:nth-child(3) {
-  background-color: red;
-}
-*/
-
 .MainBoard_mode2 {
   width: 100%;
   height: 100%;
@@ -164,19 +149,6 @@
   flex-grow: 1;
   box-sizing: border-box;  
 }
-
-/*
-.MainBoard_loginPage{
-  display: none;
-  position: absolute;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  z-index: 50;
-}
-*/
 
 .mode1TextDiv {
   width: 80%;
@@ -219,11 +191,32 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 1em;
 }
 .linksText {
   font-size: 1em;
-  padding-right: 1.5em;
   color: var(--textColor);
-  text-align: center;
   font-family: var(--fontStyle);
+}
+
+.outerLinkContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: yellow; */
+  height: 100%;
+}
+.innerLinkContainer {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease;
+  transform-origin: center;
+  /* background-color: red; */
+  line-height: 1.8em;
+  backface-visibility: hidden;
+}
+.innerLinkContainer:hover {
+  transform: scale(0.9);
 }
