--- a/client/src/boards/css/about.css
+++ b/client/src/boards/css/about.css
@@ -1,48 +1,69 @@
 .aboutPage {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: var(--backgroundColor);
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    min-height: 160px;
-  }
-  .pageContainer {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-  }
-  .header {
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    width: 100%;
-    flex: 2;
-    color: var(--textColor);
-    font-family: var(--fontStyle);
-    font-weight: bold;
-    font-size: 3.5em;
-  }
-  .content {
-    align-items: center;
-    justify-content: center;
-    gap: 0.5em;
-    color: var(--textColor);
-    flex-direction: column;
-    font-size: 1.25em;;
-    font-family: var(--fontStyle);
-    width: 100%;
-    display: flex;
-    flex: 8;    
-  }
-  .footer {
-    display: flex;
-    flex: 2;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    padding: 3em;
-  }
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: var(--backgroundColor);
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  min-height: 160px;
+  background-size: cover;
+  background-position: center;
+}
+
+.pageContainer {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  width: 100%;
+  flex: 2;
+  color: var(--textColor);
+  font-family: var(--fontStyle);
+  font-weight: bold;
+  font-size: 3.5em;
+  animation: fadeIn 1.2s ease-in-out;
+}
+
+.content {
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+  color: var(--textColor);
+  flex-direction: column;
+  font-size: 1.25em;
+  font-family: var(--fontStyle);
+  width: 100%;
+  display: flex;
+  flex: 8;
+}
+
+.footer {
+  display: flex;
+  flex: 2;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 3em;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; transform: translateY(-20px); }
+  100% { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes slideIn {
+  0% { opacity: 0; transform: translateY(-40px); }
+  100% { opacity: 1; transform: translateY(0); }
+}
+
+.slideIn {
+  animation: slideIn 1s ease-in-out;
+}
