--- a/client/src/boards/css/buttons.css
+++ b/client/src/boards/css/buttons.css
@@ -4,7 +4,7 @@
     align-items: center;
     aspect-ratio: 1 / 1;
     position: relative;
-    width: 100%;
+    width: 20vh;
     max-width: 30vh;
     flex-grow: 1;
     box-sizing: border-box;
@@ -14,7 +14,7 @@
     border: 4px solid var(--borderColor);
     background-color: transparent;
     color: var(--textColor);
-    font-size: 26px;
+    font-size: clamp(1em, 1.5vw, 3.5em);
     font-family: var(--fontStyle);
 }
 
