--- a/client/src/boards/css/dropdown.css
+++ b/client/src/boards/css/dropdown.css
@@ -3,15 +3,20 @@
     display: flex;
     justify-content: flex-end;  
     width: 100%;
+    aspect-ratio: 1/1;
     align-items: center;
 }
 
 .dropdown-button {
     width: auto;  
-    height: 100%;    
+    height: 100%; 
+    aspect-ratio: 1/1;   
     display: block;
     cursor: pointer;
     z-index: 100;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
     box-sizing: border-box; 
 }
 
